[package]
name = "weaver"
version = "0.1.0"
authors = ["Vaerian <vaeriann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
lazy_static = "1.4.0"

[build-dependencies]
chrono = "0.4.19"
git2 = "0.13.20"